# Backend/swagger.json
@@ -31,6 +31,10 @@
     {
       "name": "Users",
       "description": "Управление пользователями"
+    },
+    {
+      "name": "History",
+      "description": "Просмотр истории действий (только для админа)"
     }
   ],
   "schemes": [
@@ -1062,6 +1066,43 @@
             "description": "Internal Server Error"
           }
         }
+      }
+    },
+    "/history": {
+      "get": {
+        "tags": [
+          "History"
+        ],
+        "description": "Получить список всех действий из таблицы истории",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   },
